--- a/src/example/index.scss
+++ b/src/example/index.scss
@@ -176,9 +176,63 @@ img.course-image {
   margin: 20px;
 }
 
+button.btn-primary {
+  width: 138px;
+  height: 50px;
+  border-radius: 4px;
+  border-color:#25a78e;
+  background-color: #25a78e;
+  color: #000;
+}
+
+.btn-primary:hover {
+  color: #FFFFFF;
+  border-color: #1b5c4f;
+  border-radius: 4px;
+  background-color: #1b5c4f;
+}
+
+button.btn-primary:focus::before {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  bottom: -5px;
+  left: -5px;
+  border: solid 2px black;
+  border-radius: calc(0.375rem + 3px);
+}
+
+button.btn-primary:active::before {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  bottom: -5px;
+  left: -5px;
+  border: solid 2px black;
+  border-radius: calc(0.375rem + 3px);
+}
+
+button.btn-primary:not(:disabled):not(.disabled):active{
+  color: black;
+  background-color: #25a78e;
+  border-color: black;
+  border-radius: 6px;
+  border: solid 2px black;
+
+  ::before {
+    position: absolute;
+    top: -5px;
+    right: -5px;
+    bottom: -5px;
+    left: -5px;
+    border: solid 2px black;
+    border-radius: calc(0.375rem + 3px);
+  }
+}
+
 button.enroll-button {
-  @extend .theme-btn;
-  margin-top: 0;
+  border-radius: 6px;
+  top: 50%;
 }
 
 .tabs {
@@ -190,7 +244,6 @@ button.enroll-button {
   border: 2px solid #fff;
   cursor: pointer;
   width: 100px;
-  height: 100px;
   text-align: center;
   padding: 15px;
   display: flex;
