--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@
 @import "@edx/brand/paragon/overrides.scss";
 
 @import './example/index.scss';
+@import './global.scss';
 
 @import "~@edx/frontend-component-header/dist/index";
 @import "~@edx/frontend-component-footer/dist/footer";
