--- a/src/global.scss
+++ b/src/global.scss
@@ -6,22 +6,32 @@ body{
 
 h1{
     font-size: 60px !important;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem
 }
 
 h2{
     font-size: 40px !important;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem
 }
 
 h3{
     font-size: 36px !important;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem
 }
 
 h4{
     font-size: 26px !important;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem
 }
 
 h5{
     font-size: 23px !important;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem
 }
 
 button.btn-primary {
