test course changed

--- a/src/example/custom_scss/styles.scss
+++ b/src/example/custom_scss/styles.scss
@@ -321,3 +321,7 @@ button.enroll-button{
 button.toggle-button{
   font-size: 24px;
 }
+
+section.info, section.learn{
+  background-color: #ececec;
+}
