created syllabus + teacher component, reworked fonts

--- a/src/example/index.scss
+++ b/src/example/index.scss
@@ -2,3 +2,5 @@
 @import './custom_scss/styles.scss';
 @import './custom_scss/faq.scss';
 @import './custom_scss/customers.scss';
+@import './custom_scss/teacher.scss';
+@import './custom_scss/syllabus.scss';
