--- a/src/global.scss
+++ b/src/global.scss
@@ -1,37 +1,53 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,600;1,400&display=swap');
+
 
 body{
     font-family: 'Work Sans', sans-serif !important;
+    font-weight: 400;
 }
 
 h1{
     font-size: 60px !important;
     margin-top: 0.5rem;
-    margin-bottom: 0.5rem
+    margin-bottom: 0.5rem;
+    font-family: 'Work Sans', sans-serif !important;
+    font-weight: 600;
+    padding-bottom: 10px;
+    padding-top: 10px;
 }
 
 h2{
     font-size: 40px !important;
     margin-top: 0.5rem;
-    margin-bottom: 0.5rem
+    margin-bottom: 0.5rem;
+    font-family: 'Work Sans', sans-serif !important;
+    font-weight: 600;
+    padding-bottom: 10px;
+    padding-top: 10px;
 }
 
 h3{
     font-size: 36px !important;
     margin-top: 0.5rem;
-    margin-bottom: 0.5rem
+    margin-bottom: 0.5rem;
+    font-family: 'Work Sans', sans-serif !important;
+    font-weight: 600;
 }
 
 h4{
     font-size: 26px !important;
     margin-top: 0.5rem;
-    margin-bottom: 0.5rem
+    margin-bottom: 0.5rem;
+    font-family: 'Work Sans', sans-serif !important;
+    font-weight: 600;
 }
 
 h5{
     font-size: 23px !important;
     margin-top: 0.5rem;
-    margin-bottom: 0.5rem
+    margin-bottom: 0.5rem;
+    font-family: 'Work Sans', sans-serif !important;
+    font-weight: 600;
 }
 
 button.btn-primary {
