--- a/src/example/index.scss
+++ b/src/example/index.scss
@@ -4,3 +4,4 @@
 @import './custom_scss/customers.scss';
 @import './custom_scss/teacher.scss';
 @import './custom_scss/syllabus.scss';
+@import './custom_scss/image.scss';
