--- a/src/example/custom_scss/customers.scss
+++ b/src/example/custom_scss/customers.scss
@@ -13,24 +13,22 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+
+    .card {
+        position: relative;
+        width: 800px;
+        height: 350px;
+        padding: 20px;  
+        background-color: #fff;
+        overflow: hidden;
+        border: none;
+    }
 }
 
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.card {
-    position: relative;
-    width: 800px;
-    height: 350px;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    background-color: #fff;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
 }
 
 
