--- a/src/example/custom_scss/faq.scss
+++ b/src/example/custom_scss/faq.scss
@@ -19,10 +19,12 @@
   width: 100%;
 }
 
-.response {
+.responses article {
   border-top: 1px solid black;
+}
+
+.responses article:last-child {
   border-bottom: 1px solid black;
-  margin: 10px 0;
 }
 
 .question {
