--- a/src/example/custom_scss/teacher.scss
+++ b/src/example/custom_scss/teacher.scss
@@ -29,3 +29,23 @@ p.university{
     font-size: 16px;
     color: #454545;
 }
+
+@media screen and (max-width: 768px) {
+    .teacher {
+      flex-direction: column;
+      align-items: flex-start;
+      text-align: left;
+    }
+  
+    .teacher-image-container {
+      width: 100%;
+    }
+  
+    .teacher-image {
+      max-width: 100%;
+    }
+  
+    .teacher-bio {
+      padding-left: 0;
+    }
+  }
