--- a/src/example/custom_scss/styles.scss
+++ b/src/example/custom_scss/styles.scss
@@ -275,7 +275,7 @@ button.enroll-button {
   font-size: 15px;
 }
 
-button.enroll-button{
+button#enroll-button{
   margin-left: auto;
   width: 187px !important;
   height: 65px !important;
