--- a/src/example/custom_scss/styles.scss
+++ b/src/example/custom_scss/styles.scss
@@ -106,6 +106,11 @@ div.wrapper-continer {
       @extend .theme-btn;
     }
   }
+  @media (max-width: 499px) {
+    .wrapper-continer {
+      display: grid;
+    }
+  }
 }
 
 .white-continer-claim {
