--- a/src/example/custom_scss/styles.scss
+++ b/src/example/custom_scss/styles.scss
@@ -125,7 +125,6 @@ img.course-image {
 
 .course-info-banner {
   display: flex;
-  justify-content: space-around;
   margin-top: 10px;
   margin-bottom: 10px;
 }
@@ -134,6 +133,9 @@ img.course-image {
 @media (max-width: 500px) {
   .course-info-banner {
     display: grid;
+  }
+  .big-button {
+    width: 100%;
   }
 }
 
