--- a/src/example/custom_scss/styles.scss
+++ b/src/example/custom_scss/styles.scss
@@ -40,16 +40,16 @@ div.center {
 a.view-more {
   border-radius: 4px;
   padding: 15px;
-  background-color: #25a78e;
+  background-color: #0077c8;
   color: #000;
-  border-color: #25a78e;
+  border-color: #0077c8;
 
   &:hover:not(.disabled),
   &:focus:not(.disabled),
   &:active(.disabled) {
-    background-color: #25a78e;
+    background-color: #0077c8;
     color: #000;
-    border-color: #25a78e;
+    border-color: #0077c8;
   }
 }
 
@@ -150,8 +150,8 @@ button.btn-primary {
   width: 138px;
   height: 50px;
   border-radius: 4px;
-  border-color:#25a78e;
-  background-color: #25a78e;
+  border-color:#0077c8;
+  background-color: #0077c8;
   color: #000;
 }
 
@@ -188,7 +188,7 @@ button.btn-primary:active::before {
 
 button.btn-primary:not(:disabled):not(.disabled):active{
   color: black;
-  background-color: #25a78e;
+  background-color: #0077c8;
   border-color: black;
   border-radius: 6px;
   border: solid 2px black;
