--- a/src/global.scss
+++ b/src/global.scss
@@ -79,8 +79,8 @@ button.btn-primary {
     width: 138px;
     height: 50px;
     border-radius: 4px;
-    border-color:#25a78e;
-    background-color: #25a78e;
+    border-color:#0077c8;
+    background-color: #0077c8;
     color: #000;
   }
   
@@ -113,7 +113,7 @@ border-radius: calc(0.375rem + 3px);
 
 button.btn-primary:not(:disabled):not(.disabled):active{
 color: black;
-background-color: #25a78e;
+background-color: #0077c8;
 border-color: black;
 border-radius: 6px;
 border: solid 2px black;
