--- a/src/example/custom_scss/styles.scss
+++ b/src/example/custom_scss/styles.scss
@@ -127,6 +127,7 @@ img.course-image {
   display: flex;
   margin-top: 10px;
   margin-bottom: 10px;
+  justify-content: space-around;
 }
 
 /* Media query for screens 500px or smaller */
