--- a/src/example/custom_scss/styles.scss
+++ b/src/example/custom_scss/styles.scss
@@ -303,3 +303,9 @@ div.description {
   margin: 20px;
   padding-left: 60px;
 }
+
+button.btn-primary {
+  span.justify-content-center {
+    color: #fff !important;
+  }
+}
