Update Course About

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,3 +10,8 @@
 .course-header, .course-overview {
   padding: 2rem 0;
 }
+
+// Experiments with color fill
+.course-header figure {
+  // border-image: 1 / 0 0 0 100vw / 0 100vw 0 100vw stretch;
+}
